<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SellActivity"
    android:background="@color/colorPrimaryDark">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_cancel_sell"
        android:text="@string/sell_button_cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorAction"
        android:background="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_sell_item_form"
        app:layout_constraintTop_toBottomOf="@id/button_cancel_sell"
        android:layout_margin="24dp">

        <ImageView
            android:id="@+id/image_button_item_picture"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/baseline_add_white_24dp"
            />

        <TextView
            android:id="@+id/title_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upload an image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_button_item_picture"
            android:textColor="@color/colorWhite"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_title"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_image_button"
            android:hint="@string/sell_text_title"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_price"
            android:inputType="numberDecimal"
            android:hint="@string/sell_text_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_title"/>


        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_description"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_price"
            android:hint="@string/sell_text_description"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_group_sell_category"
            android:checkedButton="@id/radio_electronics"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_description">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_electronics"
                android:text="Electronics"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_textbooks"
                android:text="Textbooks"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_clothes"
                android:text="Clothes"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_transportation"
                android:text="Transportation"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_miscellaneous"
                android:text="Miscellaneous"
                />

        </RadioGroup>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_post_item"
        android:text="@string/sell_button_post_item"
        style="@style/LongButton"
        android:background="@drawable/button_general_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_sell_item_form"
        android:layout_margin="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>