<resources>
    <string name="app_name">USClassifieds</string>

    <string name="landing_text_welcome">See what USC students are selling right now.</string>
    <string name="landing_button_create_account">Create Account</string>
    <string name="landing_text_login">Already have an account?</string>
    <string name="landing_button_login">Log In</string>

    <string name="login_text_hint_email">Email</string>
    <string name="login_text_hint_password">Password</string>

    <string name="create_account_text_header">Create Account</string>
    <string name="create_account_profile_picture_title">Profile Picture</string>
    <string name="create_account_text_hint_full_name">Full Name</string>
    <string name="create_account_text_hint_email">USC Email</string>
    <string name="create_account_text_hint_password">Password</string>
    <string name="create_account_text_hint_confirm_password">Confirm Password</string>
    <string name="create_account_text_hint_bio">Enter a short description of yourself for other users to see.</string>
    <string name="create_account_button_register">Register</string>

    <string name="sell_button_cancel">Cancel</string>
    <string name="sell_text_header">Sell an Item</string>
    <string name="sell_text_title">Title</string>
    <string name="sell_text_price">Price</string>
    <string name="sell_text_description">Add a description</string>
    <string name="sell_button_post_item">Post item</string>

    <string name="notifications_text_header">Notifications</string>

    <string name="profile_text_header">Profile</string>
    <string name="profile_text_bio_sample">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus id tortor quam. </string>
    <string name="profile_text_label_email">Email: </string>
    <string name="profile_text_label_phone">Phone: </string>
    <string name="newUserBadge">Spectacular New Seller!</string>

    <string name="other_profile_text_header">Profile</string>
    <string name="other_profile_text_bio_sample">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus id tortor quam. </string>
    <string name="other_profile_text_label_email">Email: </string>
    <string name="other_profile_text_label_phone">Phone: </string>

    <string name="title_market">Market</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_maps">Map</string>

    <string name="sign_out">Sign Out</string>

    <string name="google_maps_key">AIzaSyALN9R_SktUCv2fHqF3IYruxbvECd1JZz4</string>
    <string name="title_length_toast">Title must be under 19 characters</string>
    <string name="description_length_toast">Description must be under 100 characters</string>
    <string name="item_too_expensive_toast">Your item is too expensive!</string>
    <string name="title_blank_toast">Title cannot be blank</string>
    <string name="price_blank_toast">Price cannot be blank</string>
    <string name="description_empty_toast">Description cannot be empty</string>
    <string name="picture_empty_toast">Picture cannot be empty</string>

</resources>
